- add dynamic tree building

--- a/src/app/charting/charting.component.html
+++ b/src/app/charting/charting.component.html
@@ -42,7 +42,7 @@
     </div>
   </div>
 
-  <div class="row justify-content-center">
+  <div class="row justify-content-center" *ngIf="fileContentMap.get('file1')">
     <div class="col-sm-4 tree-container mt-4">
       <app-tree [schema]="fileObject$ | async" (keySelected)="onKeySelected($event)"></app-tree>
     </div>
